Revert changes to tests.