@@ -4,12 +4,12 @@ import org.checkerframework.checker.interning.qual.Interned;
 import org.checkerframework.checker.interning.qual.PolyInterned;
 
 public class Arrays {
-    @SuppressWarnings("deprecation")
+
     public static Integer[] arrayclone_simple(Integer[] a_old) {
         int len = a_old.length;
         Integer[] a_new = new Integer[len];
         for (int i = 0; i < len; i++) {
-            a_new[i] = new Integer(a_old[i]); // valid
+            a_new[i] = Integer.valueOf(a_old[i]); // valid
         }
         return a_new;
     }
