@@ -25,11 +25,10 @@ public @Interned class InternedClass {
     }
 
     // Overriding method
-    @SuppressWarnings("deprecation")
     @org.checkerframework.dataflow.qual.Pure
     public String toString() {
         @Interned InternedClass c = this;
-        return new Integer(value).toString();
+        return Integer.valueOf(value).toString();
     }
 
     // Factory method
