@@ -61,14 +61,13 @@ class Explosion {
         }
     }
 
-    @SuppressWarnings("deprecation")
     public static int foo() {
         final int v;
         int x;
         Integer z;
         Integer y;
         @NonNull Integer nnz = 3;
-        z = new Integer(5);
+        z = Integer.valueOf(5);
         try {
             x = 3;
             x = 5;
